--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,62 +5,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My E-Portfolio{% endblock %}</title>
     <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
+    <link rel="stylesheet" href="{{ asset('css/animated-background.css') }}">
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="{{ path('app_portofolio_home') }}">My E-Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_portofolio_home') }}">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_cv') }}">CV</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_skills') }}">Détails</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_personal') }}">Projets Personnels</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <main class="container mt-4">
-        {% block body %}{% endblock %}
-    </main>
-
-    <footer class="bg-dark text-light py-4 mt-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h5>Contact</h5>
-                    <p>Email: exemple.email@univ-st-etienne.fr</p>
-                    <p>Phone: +33 7 xx xx xx xx</p>
-                </div>
-                <div class="col-md-6">
-                    <h5>Social Media</h5>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-light"><i class="fa-brands fa-linkedin"></i> LinkedIn</a></li>
-                        <li><a href="#" class="text-light"><i class="fa-brands fa-github"></i> GitHub</a></li>
-                        <li><a href="#" class="text-light"><i class="fa-brands fa-meta"></i> Twitter</a></li>
+    <div id="animated-background">
+        <div class='light x1'></div>
+        <div class='light x2'></div>
+        <div class='light x3'></div>
+        <div class='light x4'></div>
+        <div class='light x5'></div>
+        <div class='light x6'></div>
+        <div class='light x7'></div>
+        <div class='light x8'></div>
+        <div class='light x9'></div>
+    </div>
+    <div class="content-wrapper">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="{{ path('app_portofolio_home') }}">My E-Portfolio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_portofolio_home') }}">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_cv') }}">CV</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_skills') }}">Détails</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_personal') }}">Projets Personnels</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_contact') }}">Contact</a>
+                        </li>
                     </ul>
                 </div>
             </div>
-            <hr>
-            <p class="text-center mb-0">&copy; 2025 Sotty Vincent. All rights reserved.</p>
-        </div>
-    </footer>
+        </nav>
+
+        <main class="container mt-5 pt-5">
+            {% block body %}{% endblock %}
+        </main>
+
+        <footer class="text-light py-4 mt-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h5>Contact</h5>
+                        <p>Email: exemple.email@univ-st-etienne.fr</p>
+                        <p>Phone: +33 7 xx xx xx xx</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h5>Social Media</h5>
+                        <div class="social-icons">
+                            <a href="#" class="text-light"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="#" class="text-light"><i class="fa-brands fa-github"></i></a>
+                            <a href="#" class="text-light"><i class="fa-brands fa-twitter"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <p class="text-center mb-0">&copy; 2025 Sotty Vincent. All rights reserved.</p>
+            </div>
+        </footer>
+    </div>
 
     {% block javascripts %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -68,3 +83,4 @@
     {% endblock %}
 </body>
 </html>
+
