--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
     <link rel="stylesheet" href="{{ asset('css/animated-background.css') }}">
-    {% block stylesheets %}{% endblock %}
+    {% block stylesheets %}
+    <style>
+        .navbar {
+            transition: transform 0.3s ease-in-out;
+        }
+        .navbar-hidden {
+            transform: translateY(-100%);
+        }
+    </style>
+    {% endblock %}
 </head>
 <body>
     <div id="animated-background">
@@ -80,6 +89,27 @@
     {% block javascripts %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://kit.fontawesome.com/b46286acd6.js" crossorigin="anonymous"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                const navbar = document.querySelector('.navbar');
+                let lastScrollTop = 0;
+                const navbarHeight = navbar.offsetHeight;
+
+                window.addEventListener('scroll', function() {
+                    let scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                    
+                    if (scrollTop > lastScrollTop && scrollTop > navbarHeight) {
+                        // Scrolling down
+                        navbar.classList.add('navbar-hidden');
+                    } else {
+                        // Scrolling up
+                        navbar.classList.remove('navbar-hidden');
+                    }
+                    
+                    lastScrollTop = scrollTop <= 0 ? 0 : scrollTop;
+                }, false);
+            });
+        </script>
     {% endblock %}
 </body>
 </html>
